# ETL-Stock

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
constants/: constants.py
dags/: fintech_pipeline.py  model_pipeline.py
migrations/: env.py
migrations/versions/: 9444256ce560_create_stocks_and_cypto_tables.py
src/extract/: crypto.py  stocks.py
src/load/: supabase.py
src/models/: README.md  load_data.py  run.py  visualization.py  volatility_regime.py
